Improving news piece on indenizacao_por_extravio_em_voos_internacionais

--- a/database/outer_htmls/direito.science_pages/index.html
+++ b/database/outer_htmls/direito.science_pages/index.html
@@ -204,7 +204,7 @@
       <p class="section-description" align="left">
 
 Um mês após o Saber Direito Dois nascer online, nossa segunda aplicação web,
-        o <a href="http://noticiais.direito.science">Notícias Direito.Science</a>,
+        o <a href="http://noticias.direito.science">Notícias Direito.Science</a>,
         entra no ar em Outubro 2017!
       </p>
 
